--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body>
+-body>
     <!-- ##### Header Area Start ##### -->
     <header class="header_area">
         <div class="classy-nav-container breakpoint-off d-flex align-items-center justify-content-between">
@@ -44,7 +44,7 @@
                             <li><a href="#">Shop</a>
                                 <div class="megamenu">
                                     <ul class="single-mega cn-col-4">
-                                        <li class="title">Women's Collection</li>
+                                        <li class="title">Her Collection</li>
                                         <li><a href="shop.html">Dresses</a></li>
                                         <li><a href="shop.html">Blouses &amp; Shirts</a></li>
                                         <li><a href="shop.html">T-shirts</a></li>
